[FIX] #811 java version issue